--- a/package.json
+++ b/package.json
@@ -21,11 +21,14 @@
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.1.3",
-    "eslint-plugin-simple-import-sort": "^10.0.0",
     "eslint-config-prettier": "^9.1.0",
-    "prettier-plugin-tailwindcss": "^0.5.7",
+    "eslint-plugin-simple-import-sort": "^10.0.0",
     "postcss": "^8",
+    "prettier": "^3.2.5",
+    "prettier-plugin-tailwindcss": "^0.5.7",
+    "react-hook-form": "^7.51.0",
     "tailwindcss": "^3.3.0",
-    "typescript": "^5"
+    "typescript": "^5",
+    "zod": "^3.22.4"
   }
 }
